--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,4 @@
 [deps]
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StatGeochem = "df4de05a-b714-11e8-3c2a-c30fb13e804c"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
